--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,5 +1,33 @@
 /* All styles for tables and Search Bar as well as the text for the table.  */
 
-.Nav-position{
-    position: relative;
+/* SearchBar styling */
+.searchBar-positon-and-size{
+    /* Positoning of the search bar on the page  */
+    position:relative;
+    right: -493px;
+    bottom: 11px;
+    /* exterior of the searchBar */
+    border: 1px solid grey;
+    border-radius: 5px;
+    width: 200px;
+    padding: 2px 23px 2px 30px;
+}
+/* Search bar text and inside  */
+.searchBar-interior{
+    background-color: #f5f5f5;
+    font-size: 11px;
+    font-weight: 500; 
+}
+
+.searchBar-change:hover{
+    background-color: white;
+}
+
+/* Table styling */
+
+.table-heading-font{
+    
+}
+.table-rows-font{
+
 }
