--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -4,18 +4,18 @@
 .searchBar-positon-and-size{
     /* Positoning of the search bar on the page  */
     position:relative;
-    right: -493px;
+    right: -467px;
     bottom: 11px;
     /* exterior of the searchBar */
     border: 1px solid grey;
     border-radius: 5px;
-    width: 200px;
+    width: 245px;
     padding: 2px 23px 2px 30px;
 }
 /* Search bar text and inside  */
 .searchBar-interior{
     background-color: #f5f5f5;
-    font-size: 11px;
+    font-size: 15px;
     font-weight: 500; 
 }
 
@@ -25,9 +25,7 @@
 
 /* Table styling */
 
-.table-heading-font{
-    
-}
-.table-rows-font{
-
+.table-font{
+    font-weight: 500; 
+    font-size: 15px;
 }
